
The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting

------------------------------------------------------------------------------
??/??/??  richardjgowers
  * 0.10.0

  Enhancements

  * Added guess_bonds keyword argument to Universe creation.  This will attempt to
    guess all topology information on Universe creation. (Issue #245)
  * Added guess_bonds method to AtomGroup. (Issue #245)
  * All TopologyObjects (Bond, Angle etc) now have is_guessed attribute
  * TopologyGroup now has alternate constructor method, .from_indices()
  * Added TopologyObject.indices property
  * Amber netCDF4 Reader will now read Forces (Issue #257)
  * Amber netCDF4 Writer will now write Velocities and Forces

  Changes

  * TopologyGroup can now have zero length, and will evaluate to False
    when empty.
  * Renamed TopologyGroup.dump_contents to "to_indices"
  * Deprecated 'bonds' keyword from Universe and replaced with 'guess_bonds'

  Fixes

  * NetCDFWriter previously always wrote velocities/forces if found
    in timestep, rather than following how the Writer was created.


04/20/15  tyler.je.reddy, richardjgowers, orbeckst
  * 0.9.2

  Enhancements

  * Can now set velocity from Atom object. (Issue 221)
  * Atom object now has force attribute for getting/setting forces (requires a
    trajectory with forces) (Issue 221)
  * Added wrap method. Wrap allows the centers of groups of atoms to be
    moved within the primary unit cell without breaking up the group. (Issue 190)

  Changes

  * The MDAnalysis project moved from Google Code to GitHub: the new
    website is http://www.mdanalysis.org and the new source code
    repository is at https://github.com/MDAnalysis/mdanalysis