@@ -54,6 +54,7 @@ Chronological list of authors
   - Joe Jordan
 2015
   - Alex Nesterenko
+  - Caio S. Souza
 
 External code
 -------------
